test_regress/t/t_fourstate_format_unsup.out
%Warning-LOGICCAST: t/t_fourstate_format.v:14:20: Some features are not supported with four-state values - cast it to two-state logic or suppress this warning and it will be done implicitly
                                                : ... note: In instance 't'
   14 |     $write("%d\n", v);
      |                    ^
                    ... For warning description see https://verilator.org/warn/LOGICCAST?v=latest
                    ... Use "/* verilator lint_off LOGICCAST */" and lint_on around source to disable this message.
%Warning-LOGICCAST: t/t_fourstate_format.v:16:20: Some features are not supported with four-state values - cast it to two-state logic or suppress this warning and it will be done implicitly
                                                : ... note: In instance 't'
   16 |     $write("%d\n", v);
      |                    ^
%Warning-LOGICCAST: t/t_fourstate_format.v:18:20: Some features are not supported with four-state values - cast it to two-state logic or suppress this warning and it will be done implicitly
                                                : ... note: In instance 't'
   18 |     $write("%d\n", v);
      |                    ^
%Warning-LOGICCAST: t/t_fourstate_format.v:20:20: Some features are not supported with four-state values - cast it to two-state logic or suppress this warning and it will be done implicitly
                                                : ... note: In instance 't'
   20 |     $write("%d\n", v);
      |                    ^
%Warning-LOGICCAST: t/t_fourstate_format.v:21:20: Some features are not supported with four-state values - cast it to two-state logic or suppress this warning and it will be done implicitly
                                                : ... note: In instance 't'
   21 |     $write("%d\n", foo(1, 2));
      |                    ^~~
%Error: Exiting due to
